; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/extr_walsender.c_HandleWalSndInitStopping.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/extr_walsender.c_HandleWalSndInitStopping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@am_walsender = common dso_local global i32 0, align 4
@replication_active = common dso_local global i32 0, align 4
@MyProcPid = common dso_local global i32 0, align 4
@SIGTERM = common dso_local global i32 0, align 4
@got_STOPPING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HandleWalSndInitStopping() #0 {
  %1 = load i32, i32* @am_walsender, align 4
  %2 = call i32 @Assert(i32 %1)
  %3 = load i32, i32* @replication_active, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %9, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @MyProcPid, align 4
  %7 = load i32, i32* @SIGTERM, align 4
  %8 = call i32 @kill(i32 %6, i32 %7)
  br label %10

9:                                                ; preds = %0
  store i32 1, i32* @got_STOPPING, align 4
  br label %10

10:                                               ; preds = %9, %5
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @kill(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
